--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,10 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.2;
+  background-image: url(../images/3642.jpg);
+  background-repeat: repeat;
+  background-size: contain;
+  background-color: rgba(255, 255, 255, 80%);
   color: #212529;
 }
 
@@ -54,11 +58,9 @@ button.btn.btn-primary, .btn.reg_btn, .btn.btn-email {
 .btn.btn-email {
   width: 30%;
 }
+
 /* Main design part to update the page in various location */
 
-.right-bg {
-  background-color: #a1a1a1;
-}
 .main-content{
   font-size: 18px;
   font-weight: 600;
